[package]
name = "plat_physics"
version = "0.1.0"
edition = "2021"
description = "A simple platformer-orient physics engine for the Bevy game engine."

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
fixed_timestep = { path = "../fixed_timestep" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3