[package]
name = "vidya_camera_target"
version = "0.1.0"
edition = "2021"
description = "A small crate that adds camera targetting logic. Depends on the vidya_interp."

[dependencies]
bevy_app = "0.8.0"
bevy_transform = "0.8.0"
bevy_ecs = "0.8.0"
bevy_time = "0.8.0"

[dev-dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }