[package]
name = "vidya_dialog"
version = "0.1.0"
edition = "2021"
description = "Repository for rendering dialog boxes"

[dependencies]
bevy_app = "0.9.1"
bevy_transform = "0.9.1"
bevy_ecs = "0.9.1"
bevy_math = "0.9.1"
bevy_time = "0.9.1"
bevy_ninepatch = "0.9.1"

[dev-dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }