[package]
name = "vidya_physics"
version = "0.1.0"
edition = "2021"
description = "A simple platformer-oriented physics engine for the Bevy game engine."

[dependencies]
bevy_app = "0.8.0"
bevy_transform = "0.8.0"
bevy_ecs = "0.8.0"
bevy_math = "0.8.0"
bevy_time = "0.8.0"
vidya_fixed_timestep = { path = "../vidya_fixed_timestep" }

# For debug
bevy_asset = "0.8.0"
bevy_render = "0.8.0"
bevy_pbr = "0.8.0"

[features]
debug = []

[dev-dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
vidya_camera_target = { path = "../vidya_camera_target" }