[package]
name = "vidya_physics"
version = "0.1.0"
edition = "2021"
description = "A simple platformer-oriented physics engine for the Bevy game engine."

[dependencies]
bevy_app = "0.8.0"
bevy_transform = "0.8.0"
bevy_ecs = "0.8.0"
bevy_math = "0.8.0"
bevy_time = "0.8.0"
bevy_reflect = "0.8.0"
bevy_macro_utils = "0.8.0"
vidya_fixed_timestep = { path = "../vidya_fixed_timestep" }
bevy-inspector-egui = "0.13.0"
bevy_asset = { version = "0.8.0", optional = true }
bevy_render = { version = "0.8.0", optional = true }
bevy_pbr = { version = "0.8.0", optional = true }

[features]
debug = ["dep:bevy_asset", "dep:bevy_render", "dep:bevy_pbr"]

[dev-dependencies]
bevy = { version = "0.8.0", features = [] }
vidya_camera_target = { path = "../vidya_camera_target" }
bevy-inspector-egui = "0.13.0"

[[example]]
name = "boxes_and_terrain"
required-features = ["debug"]

[[example]]
name = "chunk_rendering_pyramids"
required-features = ["debug"]

[[example]]
name = "chunk_rendering_slopes"
required-features = ["debug"]